--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           comment_tag_name: "HASHNODE"
           commit_message: "Updated readme with the latest Hashnode Blog data"
-          feed_list: "https://phemmyhot.hashnode.dev/rss.xml"
+          feed_list: "https://babafemi-adojutelegan.hashnode.dev/rss.xml"
